MainWindow* files change MainWindow.xaml -> HangmanGameWindow.xaml MainWindow.xaml.cs -> HangmanGameWindow.xaml.cs Names replacement took place in connected files accordingly.

--- a/Simple games.csproj
+++ b/Simple games.csproj
@@ -66,7 +66,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainWindow.xaml">
+    <Page Include="HangmanGameWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -75,8 +75,8 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Phrase.cs" />
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
+    <Compile Include="HangmanGameWindow.xaml.cs">
+      <DependentUpon>HangmanGameWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
     <Page Include="GameOverWindow.xaml">
