Some changes and additions Added TicTacToe window. Changed default windows' position to the screen center.

--- a/Simple games.csproj
+++ b/Simple games.csproj
@@ -62,6 +62,9 @@
     <Compile Include="GameOverWindow.xaml.cs">
       <DependentUpon>GameOverWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="TicTacToeWindow.xaml.cs">
+      <DependentUpon>TicTacToeWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainMenuWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -80,6 +83,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="GameOverWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TicTacToeWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
